# CHEM279_Fall2024_Patrick_Neal

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build_container.sh  gauche.mop  md_to_pdf.sh  mopac_grad.sh  parse.py
HW1/: CMakeLists.txt  README.md  problem1.cpp  problem2.cpp  problem2_plot.py  problem3.cpp  run_samples_problem1.sh  run_samples_problem2.sh  run_samples_problem3.sh
HW1/my_output/Energy/: 1.txt  2.txt  3.txt  bad_atoms.txt  seven_atoms.txt
HW1/my_output/Force/: 1.txt
HW1/my_output/SD_with_line_search/: 1.txt  2.txt  reasonable.txt  very_close.txt  very_far_apart.txt
HW1/sample_input/Energy/: bad_atoms.txt  seven_atoms.txt
HW1/sample_input/SD_with_line_search/: reasonable.txt  very_close.txt  very_far_apart.txt
HW2/: CMakeLists.txt  README.md  problem1.cpp  problem2.cpp  run_samples_problem1.sh  run_samples_problem2.sh
HW2/my_output/analytical/: 1.txt  2.txt  3.txt
HW2/my_output/numerical/: 1.txt  2.txt  3.txt
HW3/: CMakeLists.txt  README.md  basic_rxn.cpp  basis_set.txt  bond_energy.cpp  problem.cpp  run_samples.sh
HW3/my_output/: C2H2+.txt  C2H2.txt  C2H4.txt  H1-.txt  H2.txt  H3.txt  cleaned_C2H2.txt  cleaned_C2H4.txt  cleaned_H2.txt
HW3/sample_input/: C2H2+.txt  H1-.txt  H3.txt  cleaned_C2H2.txt  cleaned_C2H4.txt  cleaned_H2.txt  convert_to_realxyz.py
HW4/: CMakeLists.txt  README.md  plot_scan.py  problem.cpp  run_samples.sh  scan_bond_distance.cpp
HW4/basis/: basis_set.txt
HW4/my_output/: CH3.txt  H2.txt  HF.txt  HO.txt
HW4/sample_input/: CH3.txt
HW4/scan_input/: make_scan.py
HW5/: CMakeLists.txt  README.md  problem.cpp  run_samples.sh
HW5/my_output/: H2.txt  H2O.txt  HO.txt
data/: GENERATE_DATA.sh  anti.xyz  parse.py  wigner_sample.py
data/anti/: data.pkl
data/utils/: utils.py
final/: README.md  generate_training_data.sh  run_ML_simulation.sh  train_model.sh
final/CNDO2_energy_grad/: AO.cpp  AO.h  Makefile  energy_and_grad  main.cpp
final/model/: featurize.py  prediction.py  simulation.py  simulation_speed.py  train.py
final/utils/: compile_results.py  parsers.py  wigner_sample.py
include/CNDO_2/: CNDO_2.hpp
include/Energy/: Energy.hpp  Leanard_Jones.hpp
include/Gaussian/: Gaussian.hpp
include/Gradients/: Finite_Differences.hpp  Gradients.hpp
include/Integrals/: Integrals.hpp  Numerical.hpp
include/Integrands/: Gaussian.hpp  Integrands.hpp
include/Math/: Math.hpp
include/Optimization/: Optimization.hpp  Steepest_Descent.hpp
include/PeriodicTable/: PeriodicTable.hpp
include/SCF/: SCF.hpp
include/Simulation/: Simulation.hpp
model/: data.pkl  docker_python.sh  featurize.py  model.py  predict.py  train.py
prepare_training_data/: MASTER_WORKFLOW.sh  gauche.xyz  mopac_grad.sh  mopac_opt_freq.sh  obabel.sh  parse.py  wigner_sample.py
python_simulation/: docker_python.sh  energy_fold_0_best_model.pt  energy_scaler.pkl  featurize.py  gradient_fold_2_best_model.pt  model.py  prediction.py  simulation.py
simulation/c++/: H2.txt  H2O.txt  README.md  md_simulation_cndo  md_simulation_cndo.cpp
simulation/timing/: timing.ipynb
src/: CMakeLists.txt
src/CNDO_2/: CMakeLists.txt  CNDO_2.cpp
src/Energy/: CMakeLists.txt  Leanard_Jones.cpp
src/Gaussian/: CMakeLists.txt  Gaussian.cpp  Gaussian.cpp.bak  test
src/Gradients/: CMakeLists.txt  (+1 more)
(+18 files in other folders)
